--- a/hola.html
+++ b/hola.html
@@ -7,9 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <div>Hola Mundo, esta es mi primera pagina WEB</div>
-    <div>Este es un comentario en </div>
-    <button>Enviar</button>
+   <header></header>
+
+   <main>
+    <section></section>
+    <section></section>
+   </main>
 
 </body>
 </html>
