--- a/hola.html
+++ b/hola.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,6 +10,7 @@
    <header></header>
 
    <main>
+    <section></section>
     <section></section>
     <section></section>
    </main>
