--- a/hola.html
+++ b/hola.html
@@ -7,7 +7,14 @@
     <title>Document</title>
 </head>
 <body>
-   <header></header>
+   <header>
+    <ul>
+        <li>Nuevo Post</li>
+        <li>Iniciar Sesion</li>
+        <li>Regitro</li>
+        <li>Busqueda</li>
+    </ul>
+   </header>
 
    <main>
     <section></section>
