--- a/hola.html
+++ b/hola.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
 </head>
 <body>
    <header>
-    <ul>
+    <ul class="navbar">
         <li>Nuevo Post</li>
+        <li>Logo</li>
         <li>Iniciar Sesion</li>
         <li>Regitro</li>
         <li>Busqueda</li>
