--- a/hola.html
+++ b/hola.html
@@ -12,7 +12,7 @@
    <header>
     <ul class="navbar">
         <li>Nuevo Post</li>
-        <li>Logo</li>
+        <li><img src="./media/corgi.png" alt="Logo Pagina" class="logo"></li>
         <li>Iniciar Sesion</li>
         <li>Regitro</li>
         <li>Busqueda</li>
