se agrega estilos a boton nuevo post

--- a/hola.html
+++ b/hola.html
@@ -11,7 +11,9 @@
 <body>
    <header>
     <ul class="navbar">
-        <li>Nuevo Post</li>
+        <li>
+            <button class="mainButton">Nuevo Post</button>
+        </li>
         <li>Logo</li>
         <li>Iniciar Sesion</li>
         <li>Regitro</li>
