Agregar estilos a boton de registro

--- a/hola.html
+++ b/hola.html
@@ -16,7 +16,7 @@
         </li>
         <li>Logo</li>
         <li>Iniciar Sesion</li>
-        <li>Regitro</li>
+        <li class="mainButton">Registro</li>
         <li>Busqueda</li>
     </ul>
    </header>
