Se crean estilos genericos para botones

--- a/hola.html
+++ b/hola.html
@@ -12,11 +12,11 @@
    <header>
     <ul class="navbar">
         <li>
-            <button class="mainButton">Nuevo Post</button>
+            <button class="button mainButton">Nuevo Post</button>
         </li>
         <li>Logo</li>
-        <li>Iniciar Sesion</li>
-        <li class="mainButton">Registro</li>
+        <li class="button secondaryButton">Iniciar Sesion</li>
+        <li class="button mainButton">Registro</li>
         <li>Busqueda</li>
     </ul>
    </header>
