agregar estilos cuadro de busqueda

--- a/hola.html
+++ b/hola.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="shorcut icon" href="./media/corgi.png" type="image/x-icon">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/js/all.min.js" integrity="sha512-6PM0qYu5KExuNcKt5bURAoT6KCThUmHRewN3zUFNaoI6Di7XJPTMoT6K0nsagZKk2OB4L7E3q1uQKHNHd4stIQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <title>Razas de Perros</title>
 </head>
 <body>
@@ -13,9 +14,15 @@
     <ul class="navbar">
         <li>Nuevo Post</li>
         <li>Logo</li>
+        <li>
+            <div class="buscar">
+                <input type="text" placeholder="Buscar raza">
+                <i class="fas fa-search"></i>
+            </div>
+        </li>
         <li>Iniciar Sesion</li>
         <li>Regitro</li>
-        <li>Busqueda</li>
+        
     </ul>
    </header>
 
