conflicto merge branch 6

--- a/hola.html
+++ b/hola.html
@@ -15,8 +15,8 @@
         <li>
             <button class="button mainButton">Nuevo Post</button>
         </li>
-        <li class="button secondaryButton">Iniciar Sesion</li>
-        <li class="button mainButton">Registro</li>
+        <li class="button ">Iniciar Sesion</li>
+        <li class="button ">Registro</li>
         <li>Busqueda</li>
     </ul>
    </header>
