cambios en ultimo merge 8

--- a/hola.html
+++ b/hola.html
@@ -16,14 +16,19 @@
         <li>
             <button class="button mainButton">Nuevo Post</button>
         </li>
-        <li class="button ">Iniciar Sesion</li>
-        <li class="button ">Registro</li>
         <li>
             <div class="buscar">
                 <input type="text" placeholder="Buscar raza">
                 <i class="fas fa-search"></i>
             </div>
         </li>
+        <li>
+            <button class="button secondaryButton">Iniciar Sesion</button>
+        </li>
+        <li>
+            <button class="button secondaryButton">Registro</button>
+        </li>
+     
     </ul>
    </header>
 
