ultimos cambios de sprint 1

--- a/hola.html
+++ b/hola.html
@@ -23,7 +23,7 @@
             </div>
         </li>
         <li>
-            <button class="button secondaryButton">Iniciar Sesion</button>
+            <button class="button secondaryButton">ingresar</button>
         </li>
         <li>
             <button class="button secondaryButton">Registro</button>
