cambio estilo navbar

--- a/hola.html
+++ b/hola.html
@@ -19,7 +19,7 @@
         <li>
             <div class="buscar">
                 <input type="text" placeholder="Buscar raza">
-                <i class="fas fa-search"></i>
+                <i class="fas fa-search button iconoBuscar"></i>
             </div>
         </li>
         <li>
