imagenes de perros

--- a/hola.html
+++ b/hola.html
@@ -33,7 +33,23 @@
    </header>
 
    <main>
-    <section></section>
+    <section>
+        <h1>Razas de Perros</h1>
+        <ul class="breedCardContainer">
+            <li class="breedCard">
+                <div class="contenedor-imagen">
+                    <img src="./media/BorderCollie.jpg" alt="Border Collie">
+                </div>
+                Border Collie
+            </li>
+            <li class="breedCard">
+                <div class="contenedor-imagen">
+                    <img src="./media/rhodesianjpg.jpg" alt="Rhodesian">
+                </div>
+                Rhodesian
+            </li>
+        </ul>
+    </section>
     <section></section>
     <section></section>
    </main>
