creacion de breecard con estilos

--- a/hola.html
+++ b/hola.html
@@ -40,13 +40,15 @@
                 <div class="contenedor-imagen">
                     <img src="./media/BorderCollie.jpg" alt="Border Collie">
                 </div>
-                Border Collie
+                <span class="breedTitle">Border Collie</span>
+                
             </li>
             <li class="breedCard">
                 <div class="contenedor-imagen">
                     <img src="./media/rhodesianjpg.jpg" alt="Rhodesian">
                 </div>
-                Rhodesian
+                <span class="breedTitle">Rhodesian</span>
+                
             </li>
         </ul>
     </section>
